k8s/clusters/homelabrestore01/infrastructure/vault-raft/snapshot.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: restore-vault-snapshot
  namespace: restore-vault
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: restore-vault-snapshot
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
            - port: '53'
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: restore-vault
            app.kubernetes.io/name: restore-vault
      toPorts:
        - ports:
            - port: '8200'
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: snapshot-to-vault
  namespace: restore-vault
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: restore-vault
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: restore-vault-snapshot
      ports:
        - protocol: TCP
          port: 8200
